update for Java 17 compatibility